--- a/tests/cors/index.html
+++ b/tests/cors/index.html
@@ -31,6 +31,11 @@
       //xhr.open('GET', 'http://updates.html5rocks.com', true);
       //xhr.send();
 
+      // Test on the development server
+      //xhr.open('GET', 'http://appdev.gizur.com:9000/0b213a639078/b_rootapp', true);
+      //xhr.send();
+
+      // Test on localhost
       xhr.open('GET', 'http://localhost:9000/0b213a639078/b_rootapp', true);
       xhr.send();
 
